# browser-aware-ai-assistant

./: .gitignore  README.md
browser-assistant/: .env  browser_manager.py  gdocs_service.py  llm_service.py  main.py  models.py  price_service.py  pyproject.toml  rag_cache.db  rag_service.py  youtube_rag.py  youtube_service.py
chrome-extention/: background.js  chat.css  chat.html  content.js  highlighter.js  manifest.json  price_tracker.css  price_tracker.html  price_tracker.js  youtube_chat.js
frontend/: package-lock.json
frontend/src/: App.jsx
